2006-02-09  Daniel Steffen  <das@users.sourceforge.net>

	* generic/tk.decls:             fix signature of TkMacOSXInvalClipRgns
	* generic/tkPlatDecls.h:        to use Tk_Window instead of internal	
	* macosx/tkMacOSXSubwindows.c:  type TkWindow (which led to any include 
	* macosx/tkMacOSXWindowEvent.c: of public header tkMacOSX.h requiring
	* macosx/tkMacOSXWm.c:          prior include of tkInt.h).
	
	* generic/tk.h:          move TkAqua specific REDO_KEYSYM_LOOKUP define
	* macosx/tkMacOSXPort.h: out of tk.h into platform header.

2006-01-25  Don Porter  <dgp@users.sourceforge.net>

        * library/bgerror.tcl:  Updates to use Tcl 8.4 features. [Patch 1237759]
        * library/button.tcl:
        * library/choosedir.tcl:
        * library/clrpick.tcl:
        * library/comdlg.tcl:
        * library/console.tcl:
        * library/dialog.tcl:
        * library/entry.tcl:
        * library/focus.tcl:
        * library/listbox.tcl:
        * library/menu.tcl:
        * library/msgbox.tcl:
        * library/palette.tcl:
        * library/panedwindow.tcl:
        * library/safetk.tcl:
        * library/scale.tcl:
        * library/scrlbar.tcl:
        * library/spinbox.tcl:
        * library/tearoff.tcl:
        * library/text.tcl:
        * library/tk.tcl:
        * library/tkfbox.tcl:
        * library/xmfbox.tcl:

2006-01-23  Daniel Steffen  <das@users.sourceforge.net>

	* unix/configure:    minor fix to Darwin specific code removing
	* unix/configure.in: 64bit flags from CFLAGS for Tk build.

2006-01-20  Joe English  <jenglish@users.sourceforge.net>

	* generic/tkEvent.c, unix/tkUnixEvent.c:  XIM fixes 
	[See #905830, patch tk84-xim-fixes.patch].
	+ Revert 2005-12-05 patch disabling XIM when SCIM in use;
	+ Make sure all X events get passed to XFilterEvent,
	including those without a corresponding Tk window.

2006-01-10  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/tkMacOSXDraw.c: re-added inclusion of tclInt.h to allow access